# Proxy-DRF-Vue

./: .gitignore  README.md  docker-compose.yml
back/: Dockerfile  pyproject.toml
back/project/: db.sqlite3  urls.py
back/project/abc_utils/: data.py  models.py  views.py
back/project/apps/proxy/: admin.py  apps.py  handler.py  models.py  serializer.py  urls.py  views.py
back/project/apps/proxy/migrations/: 0001_initial.py
back/project/apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
back/project/apps/users/data/: base.py
back/project/apps/users/helpers/: controller.py  login.py  registration.py  sub.py
back/project/apps/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_email_and_more.py
back/project/settings/: base.py
front/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.js
front/src/: App.vue  main.js
front/src/components/: Auth.vue
front/src/components/Drawer/: Drawer.vue
front/src/components/FormComponent/: BaseInput.vue  PasswordInput.vue
front/src/components/Header/: Header.vue
front/src/handler/: auto_login.js
front/src/plugins/: index.js
front/src/router/: index.js
front/src/state/: index.js  site.js  user.js
front/src/views/: IndexPage.vue  Profile.vue  ProxyList.vue  ProxyView.vue
nginx/: nginx.conf
